created api template for further implementations